Moved the removal of the .no-loading class to when the template has been loaded aswell, refactored the demo to be more standards compliant

--- a/public/css/site.build.css
+++ b/public/css/site.build.css
@@ -750,3 +750,29 @@ body, html {
       body .full-scrolling, html .full-scrolling {
         height: auto;
         padding-bottom: 8em; } }
+
+.news {
+  padding: 1em; }
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg); } }
+  .news.no-loading:before,
+  .news .no-loading:before {
+    display: block;
+    content: '';
+    box-sizing: border-box;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid #cccccc;
+    border-top-color: #333333;
+    animation: spinner .6s linear infinite;
+    position: absolute; }
+  .news li.no-loading:before {
+    margin-top: -1em; }
+  .news .no-error {
+    background-color: #ff0000; }
+  .news ul {
+    padding: 1em;
+    list-style-type: disc; }
